--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.5",
+    "@splinetool/runtime": "^0.9.220",
     "cypress": "^10.0.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
